--- a/src/app/features/home/admin.component.html
+++ b/src/app/features/home/admin.component.html
@@ -1,2 +1,19 @@
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <mat-toolbar>Hello Admin</mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item routerLink="dashboard">Dashboard</a>
+            <a mat-list-item routerLink="users">Users</a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar class="toolbar-container">
+            <span>Power Mail</span>
+            <span class="spacer"></span>
+            <button (click)="doAlert()" routerLink="/auth">Log Out</button>
+        </mat-toolbar>
+        <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
