--- a/src/app/features/home/pages/dashboard/dashboard.component.html
+++ b/src/app/features/home/pages/dashboard/dashboard.component.html
@@ -1,1 +1,50 @@
-<p>dashboard works!</p>
+<!-- Cards with media area -->
+<div style="display: table-row-group;">
+
+
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <mat-card class="example-card">
+            <mat-card-title-group>
+                <mat-card-title>Total Users</mat-card-title>
+                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
+            </mat-card-title-group>
+            <mat-card-content>
+                0
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="example-card">
+            <mat-card-title-group>
+                <mat-card-title>Total Campaigns</mat-card-title>
+                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
+            </mat-card-title-group>
+            <mat-card-content>
+                0
+            </mat-card-content>
+        </mat-card>
+
+    </div>
+    <div class="col-md-6">
+        <mat-card class="example-card">
+            <mat-card-title-group>
+                <mat-card-title class="center">Total Prospectes</mat-card-title>
+                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
+            </mat-card-title-group>
+            <mat-card-content>
+                0
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="example-card">
+            <mat-card-title-group>
+                <mat-card-title>Total Messages</mat-card-title>
+                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
+            </mat-card-title-group>
+            <mat-card-content>
+                0
+            </mat-card-content>
+        </mat-card>
+    </div>
+</div>
