--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -1,1 +1,57 @@
-<p>login works!</p>
+<div class="bg-secondaryy" style="border: px solid transparent; background: white;">
+    <section class="vh-110" style="height: 110vh;">
+        <div class="container h-100">
+
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-4 col-lg-4 col-xl-5">
+                    <div class="">
+                        <div class="card-body  ">
+                            <!-- <div class="logo">
+                      <img src="/assets/logo.jpg" alt=""> 
+                 </div>
+                 <div class="text-center">
+                  <u> <h2>Powermail   </h2></u>
+              </div>-->
+                            <form [formGroup]="loginForm" (ngSubmit)="logIn()" novalidate>
+                                <!--<p class="h4 mb-4 text-center">Login</p>-->
+                                <div class="form-outline ">
+                                    <!-- Email -->
+                                    <label>Email</label>
+                                    <input formControlName="email" type="email" id="typeEmailX-2"
+                                        class="form-control mb-3 " placeholder="E-mail" />
+                                    <p style="color: red; " *ngIf="email?.invalid &&email?.touched">Email is required
+                                    <p>
+
+
+
+
+
+                                        <!-- Password --><label>Password</label>
+                                        <input formControlName="password" type="password" id="typePasswordX-2"
+                                            class="form-control mb-3 margin-top:4;" placeholder="Password" />
+                                    <p style="color:red;" *ngIf="password?.invalid &&password?.touched">Password is
+                                        required</p>
+                                </div>
+
+
+                                <!-- Checkbox 
+                <div class="form-check d-flex justify-content-start mb-4">
+                  <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                  <label class="form-check-label" for="form1Example3"> Remember password </label>
+                </div>-->
+
+                                <div class="d-grid gap-2">
+                                    <button class="btn btn-primary rounded-pill margin-top:4;" type="button"
+                                        [disabled]="!loginForm.valid" (click)="logIn()">LOG IN</button>
+
+                                </div>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+</div>
