--- a/src/app/features/home/admin.component.scss
+++ b/src/app/features/home/admin.component.scss
@@ -1,24 +1,3 @@
-.sidenav-container {
-    height: 100%;
+.active {
+    background-color: rgb(193, 66, 224)!important;
   }
-  
-  .sidenav {
-    width: 200px;
-  }
-  
-  .sidenav .mat-toolbar {
-    background: inherit;
-  }
-  
-  .mat-toolbar.mat-primary {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-  }
- .spacer{
-     flex: 1 1 auto;
-     background-color:red;
- }
- .toolbar-container{
-  background-color: aqua;
-}
