--- a/src/app/features/home/pages/dashboard/dashboard.component.html
+++ b/src/app/features/home/pages/dashboard/dashboard.component.html
@@ -1,50 +1,139 @@
-<!-- Cards with media area -->
-<div style="display: table-row-group;">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>1234</mat-card-title>
+                    <mat-card-subtitle>no. of users</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
+                    <!-- {{longText}} -->
+                </mat-card-content>
+            </mat-card>
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>12</mat-card-title>
+                    <mat-card-subtitle>no. of campaigns</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
+                    <!-- {{longText}} -->
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <div class="col-md-4">
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>34</mat-card-title>
+                    <mat-card-subtitle>no. of prospectes</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
+                    <!-- {{longText}} -->
+                </mat-card-content>
+            </mat-card>
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>56</mat-card-title>
+                    <mat-card-subtitle>no. of messages</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
+                    <!-- {{longText}} -->
+                </mat-card-content>
+            </mat-card>
+        </div>
+        <div class="col-md-4">
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>Shiba Inu</mat-card-title>
+                    <mat-card-subtitle>Small</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
+                    <!-- {{longText}} -->
+                </mat-card-content>
+            </mat-card>
+            <mat-card class="example-card mt-2">
+                <mat-card-title-group>
+                    <mat-card-title>Shiba Inu</mat-card-title>
+                    <mat-card-subtitle>Small</mat-card-subtitle>
+                </mat-card-title-group>
+                <mat-card-content>
 
-
-</div>
-<div class="row">
-    <div class="col-md-6">
-        <mat-card class="example-card">
-            <mat-card-title-group>
-                <mat-card-title>Total Users</mat-card-title>
-                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
-            </mat-card-title-group>
-            <mat-card-content>
-                0
-            </mat-card-content>
-        </mat-card>
-
-        <mat-card class="example-card">
-            <mat-card-title-group>
-                <mat-card-title>Total Campaigns</mat-card-title>
-                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
-            </mat-card-title-group>
-            <mat-card-content>
-                0
-            </mat-card-content>
-        </mat-card>
+                </mat-card-content>
+            </mat-card>
+        </div>
 
     </div>
-    <div class="col-md-6">
-        <mat-card class="example-card">
-            <mat-card-title-group>
-                <mat-card-title class="center">Total Prospectes</mat-card-title>
-                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
-            </mat-card-title-group>
-            <mat-card-content>
-                0
-            </mat-card-content>
-        </mat-card>
 
-        <mat-card class="example-card">
-            <mat-card-title-group>
-                <mat-card-title>Total Messages</mat-card-title>
-                <mat-card-subtitle>{{longText}}</mat-card-subtitle>
-            </mat-card-title-group>
-            <mat-card-content>
-                0
-            </mat-card-content>
-        </mat-card>
-    </div>
 </div>
+
+<div class="content-wrapper">
+    <div class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <section class="content">
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box">
+                        <span class="info-box-icon bg-info elevation-1"><i class="fas fa-cog"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">CPU Traffic</span>
+                            <span class="info-box-number">
+                                10
+                                <small>%</small>
+                            </span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <span class="info-box-icon bg-danger elevation-1"><i class="fas fa-thumbs-up"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Likes</span>
+                            <span class="info-box-number">41,410</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+                <div class="clearfix hidden-md-up"></div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <span class="info-box-icon bg-success elevation-1"><i class="fas fa-shopping-cart"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">Sales</span>
+                            <span class="info-box-number">760</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-users"></i></span>
+                        <div class="info-box-content">
+                            <span class="info-box-text">New Members</span>
+                            <span class="info-box-number">2,000</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </div> -->
