--- a/src/app/features/home/pages/users-stats/users-stats.component.html
+++ b/src/app/features/home/pages/users-stats/users-stats.component.html
@@ -15,13 +15,12 @@
             </mat-select>
 
         </mat-form-field>
-        <button mat-button [matMenuTriggerFor]="actions" style="border: 1px solid rgb(50, 164, 230); color: rgb(50, 164, 230);background-color:white;
-  float: right; margin-top: 1%;width: 13%; margin-right: 4.2%;">Select actions <mat-icon>more_vert</mat-icon> </button>
-        <mat-menu #actions="matMenu">
-            <button mat-menu-item>Enable</button>
-            <button mat-menu-item>Disable</button>
-            <button mat-menu-item>reset</button>
-        </mat-menu>
+        <mat-form-field style="width: 15%;margin-right: 11%;float: right;">
+
+            <input matInput placeholder="Search by Date">
+
+
+        </mat-form-field>
     </div>
 
 
@@ -45,46 +44,55 @@
         </ng-container>
 
         <!-- Position Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="emailAddress">
             <th mat-header-cell *matHeaderCellDef class="fontSize">
-                <mat-icon class="customIconSize">unfold_more</mat-icon> Name
+                <mat-icon class="customIconSize">unfold_more</mat-icon> Email Address
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.emailAddress}} </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="RegistrationEmail">
+        <ng-container matColumnDef="googleAccounts">
             <th mat-header-cell *matHeaderCellDef class="fontSize">
-                <mat-icon class="customIconSize">unfold_more</mat-icon> Registration Email
+                <mat-icon class="customIconSize">unfold_more</mat-icon> googleAccounts
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.RegistrationEmail}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.googleAccounts}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="status">
+
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="contacts">
             <th mat-header-cell *matHeaderCellDef class="fontSize">
-                <mat-icon class="customIconSize">unfold_more</mat-icon> Status
+                <mat-icon class="customIconSize">unfold_more</mat-icon> Contacts
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.contacts}} </td>
+        </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="campaigns">
+            <th mat-header-cell *matHeaderCellDef class="fontSize">
+                <mat-icon class="customIconSize">unfold_more</mat-icon> Campaigns
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.campaigns}} </td>
+        </ng-container>
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="messages">
+            <th mat-header-cell *matHeaderCellDef class="fontSize">
+                <mat-icon class="customIconSize">unfold_more</mat-icon> Messages
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.messages}} </td>
+        </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="creationTag">
+            <th mat-header-cell *matHeaderCellDef class="fontSize">
+                <mat-icon class="customIconSize">unfold_more</mat-icon> Creation Tag
             </th>
             <td mat-cell *matCellDef="let element">
                 <mat-chip-list aria-label="Fish selection">
-                    <mat-chip color="accent" selected>{{element.status}}</mat-chip>
+                    <mat-chip style="background-color: rgba(255,187,67,255);" selected>Beta
+                        Testers{{element.creationTag}}</mat-chip>
                 </mat-chip-list>
             </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="lastlogin">
-            <th mat-header-cell *matHeaderCellDef class="fontSize">
-                <mat-icon class="customIconSize">unfold_more</mat-icon> Last Login
-            </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastlogin}} </td>
-        </ng-container>
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="Datejoined">
-            <th mat-header-cell *matHeaderCellDef class="fontSize">
-                <mat-icon class="customIconSize">unfold_more</mat-icon> Datejoined
-            </th>
-            <td mat-cell *matCellDef="let element"> {{element.Datejoined}} </td>
         </ng-container>
 
 
