added error handling

--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -5,15 +5,19 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-4 col-lg-4 col-xl-5">
                     <div class="">
+                        
                         <div class="card-body  ">
-                            <!-- <div class="logo">
-                      <img src="/assets/logo.jpg" alt=""> 
-                 </div>
-                 <div class="text-center">
-                  <u> <h2>Powermail   </h2></u>
-              </div>-->
-                            <form [formGroup]="loginForm" (ngSubmit)="logIn()" novalidate>
+
+                          
+                             
+                            
+                          
+                            <form [formGroup]="loginForm"  (ngSubmit)="logIn()" novalidate>
                                 <!--<p class="h4 mb-4 text-center">Login</p>-->
+                                 <!--Alert not success-->
+                                 <div *ngIf="" && !errorMessage class="alert alert-danger" role="alert">
+                                    Invalid! Email or Password
+                                  </div>
                                 <div class="form-outline ">
                                     <!-- Email -->
                                     <label>Email</label>
@@ -34,15 +38,12 @@
                                 </div>
 
 
-                                <!-- Checkbox 
-                <div class="form-check d-flex justify-content-start mb-4">
-                  <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                  <label class="form-check-label" for="form1Example3"> Remember password </label>
-                </div>-->
+                               
 
                                 <div class="d-grid gap-2">
                                     <button class="btn btn-primary rounded-pill margin-top:4;" type="button"
-                                        [disabled]="!loginForm.valid" (click)="logIn()">LOG IN</button>
+                                        [disabled]="!loginForm.valid" (click)="logIn()" >LOG IN</button>
+                                        
 
                                 </div>
                             </form>
@@ -55,3 +56,12 @@
 
     </section>
 </div>
+<section >
+    <div class="container" *ngIf="errorMessage">
+        <div class="row">
+            <div class="col">
+                <p class="h4 text-danger">{{errorMessage}}</p>
+            </div>
+        </div>
+    </div>
+</section>
