--- a/src/app/features/home/admin.component.html
+++ b/src/app/features/home/admin.component.html
@@ -139,6 +139,9 @@
                     <i class="fas fa-th-large"></i>
                 </a>
             </li>
+            <li>
+                <button type="button" class="btn btn-primary" (click)="logOut()">LogOut</button>
+            </li>
         </ul>
     </nav>
 
