--- a/src/app/features/home/pages/users-stats/users-stats.component.html
+++ b/src/app/features/home/pages/users-stats/users-stats.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div style="background-color:white;margin-left: 25px;">
+    <div style="background-color:white;margin-left: px;width: auto;">
         <mat-form-field appearance="">
             <mat-label>Search user by </mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Search columns by">
