--- a/src/app/features/home/pages/users/users.component.html
+++ b/src/app/features/home/pages/users/users.component.html
@@ -1,241 +1,146 @@
-<div>
-  <div style="background-color:white;margin-left: 25px;">
-    <mat-form-field appearance="">
-      <mat-label>Search user by </mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search columns by">
+<div aria-live="assertive" aria-atomic="true" style="position: relative; min-height: 50px;margin-bottom: 0%;"
+  *ngIf="errorMessage">
+  <div>
 
+    <div class="alert alert-warning"
+      style="position: absolute; top: 0; right: 0;background-color: #ffc10742;margin-right: 1;" role="alert">
+      {{errorMessage}}
+    </div>
 
-    </mat-form-field>
-    <mat-form-field style="width: 15%;margin-left: 6px;">
-      <mat-label>Search by</mat-label>
-      <mat-select value="drop">
-
-        <mat-option value="name">Name</mat-option>
-        <mat-option value="email">Email ID</mat-option>
-      </mat-select>
-
-    </mat-form-field>
-    <button mat-button [matMenuTriggerFor]="actions" style="border: 1px solid rgb(50, 164, 230); color: rgb(50, 164, 230);background-color:white;
-  float: right; margin-top: 1%;width: 13%; margin-right: 4.2%;">Select actions <mat-icon>more_vert</mat-icon> </button>
-    <mat-menu #actions="matMenu">
-      <button mat-menu-item>Enable</button>
-      <button mat-menu-item>Disable</button>
-      <button mat-menu-item>reset</button>
-    </mat-menu>
   </div>
+</div>
+<div style="background-color:white;margin-left:4px;min-width: auto; position: inherit;" >
+  <mat-form-field appearance="">
+    <mat-label>Search user by </mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search columns by">
+
+
+  </mat-form-field>
+  <mat-form-field style="margin-left: 6px;">
+    <mat-label>Search by</mat-label>
+
+    <mat-select value="drop">
+
+      <mat-option value="name">Name</mat-option>
+      <mat-option value="email">Email ID</mat-option>
+    </mat-select>
+
+  </mat-form-field>
+  <button mat-button [matMenuTriggerFor]="actions" style="border: 1px solid rgb(50, 164, 230); color: rgb(50, 164, 230);background-color:white;
+  float: right; margin-top: 1%; margin-right: 2px;width:auto">Select actions <mat-icon>more_vert</mat-icon> </button>
+  <mat-menu #actions="matMenu">
+    <button mat-menu-item>Enable</button>
+    <button mat-menu-item>Disable</button>
+    <button mat-menu-item>reset</button>
+  </mat-menu>
+
+
+</div >
+
+<div class="example-container mat-elevation-z8" >
+<table mat-table [dataSource]="dataSource"  >
+
+  <!-- Checkbox Column -->
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+      </mat-checkbox>
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+        [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+      </mat-checkbox>
+    </td>
+  </ng-container>
+
+  <!-- Position Column -->
+  <!-- <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+    <mat-cell *matCellDef="let element"> 
+      <span class="mobile-label">Name:</span>
+      {{element.firstname}} 
+    </mat-cell>
+  </ng-container> -->
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize">unfold_more</mat-icon>Name
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+  </ng-container>
 
 
 
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 ">
+  <ng-container matColumnDef="registrationEmail">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize">unfold_more</mat-icon>Email
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
 
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-        </mat-checkbox>
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
+  <!-- <ng-container matColumnDef="registrationEmail">
+    <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+    <mat-cell *matCellDef="let element"> 
+      <span class="mobile-label">registrationEmail</span>
+      {{element.email}} 
+    </mat-cell>
+  </ng-container> -->
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef class="fontSize">
-        <mat-icon class="customIconSize">unfold_more</mat-icon> Name
-      </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+  <!-- Weight Column -->
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize">unfold_more</mat-icon> Status
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <mat-chip-list aria-label="Fish selection">
+        <mat-chip color="warn" selected>{{element.status}}</mat-chip>
+      </mat-chip-list>
+    </td>
+  </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="registrationEmail">
-      <th mat-header-cell *matHeaderCellDef class="fontSize">
-        <mat-icon class="customIconSize">unfold_more</mat-icon> Registration Email
-      </th>
-      <td mat-cell *matCellDef="let element"> {{element.registrationEmail}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef class="fontSize">
-        <mat-icon class="customIconSize">unfold_more</mat-icon> Status
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <mat-chip-list aria-label="Fish selection">
-          <mat-chip color="warn" selected>{{element.status}}</mat-chip>
-        </mat-chip-list>
-      </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="lastlogin">
-      <th mat-header-cell *matHeaderCellDef class="fontSize">
-        <mat-icon class="customIconSize">unfold_more</mat-icon> Last Login
-      </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastlogin}} </td>
-    </ng-container>
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="datejoined">
-      <th mat-header-cell *matHeaderCellDef class="fontSize">
-        <mat-icon class="customIconSize">unfold_more</mat-icon> Datejoined
-      </th>
-      <td mat-cell *matCellDef="let element"> {{element.datejoined}} </td>
-    </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="lastlogin">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize">unfold_more</mat-icon> Last Login
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.lastlogin}} </td>
+  </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="datejoined">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize">unfold_more</mat-icon> Datejoined
+    </th>
+    <td mat-cell *matCellDef="let element"> {{element.datejoined}} </td>
+  </ng-container>
 
 
 
 
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>
-        <mat-icon class="customIconSize" style="margin-left: 43%;">unfold_more</mat-icon>
-      </th>
-      <mat-cell *matCellDef="let row">
-        <button mat-button [matMenuTriggerFor]="actions"
-          style="background-color: rgb(194, 187, 187) ;margin-top: 10px;margin-left:40%;padding-left: 5%;">Actions
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #actions="matMenu">
-          <button mat-menu-item>Active</button>
-          <button mat-menu-item>Disable</button>
-          <button mat-menu-item>reset</button>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-icon class="customIconSize" style="margin-left: 43%;">unfold_more</mat-icon>
+    </th>
+    <mat-cell *matCellDef="let row">
+      <button mat-button [matMenuTriggerFor]="actions"
+        style="background-color: rgb(194, 187, 187) ;margin-top: 10px;margin-left:40%;padding-left: 5%;"> Actions
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #actions="matMenu">
+        <button mat-menu-item>Active</button>
+        <button mat-menu-item>Disable</button>
+        <button mat-menu-item>reset</button>
 
-        </mat-menu>
-      </mat-cell>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      </mat-menu>
+    </mat-cell>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns " ></tr>
 
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-    </tr>
-  </table>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+  </tr>
+
+</table>
+</div>
   <mat-paginator [pageSizeOptions]="[5,8, 10,15, 20,23]" showFirstLastButtons aria-label="Select page of ">
   </mat-paginator>
-</div>
-
-<!--Pop up-->
-
-
-<hr />
-<button style="margin: 10px; padding: 10px" type="button" class="btn btn-primary" (click)="openPopup()">Show Data
-</button>
-<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayStyle}">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <!--<div class="modal-header">
-		<h4 class="modal-title">GeeksForGeeks</h4>
-	</div>-->
-      <div class="modal-body">
-
-        <form>
-
-          <div class="row">
-            <div class="col-md-6 mb-1">
-
-              <div class="form-outline">
-                <label class="form-label" for="firstName">First Name</label>
-                <input type="text" id="firstName" class="form-control " />
-
-              </div>
-
-            </div>
-            <div class="col-md-6 mb-1">
-
-              <div class="form-outline">
-                <label class="form-label" for="lastName">Last Name</label>
-                <input type="text" id="lastName" class="form-control " />
-
-              </div>
-
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6 mb-1 d-flex align-items-center">
-
-              <div class="form-outline datepicker w-100">
-                <label for="birthdayDate" class="form-label">Birthday</label>
-                <input type="text" class="form-control " id="birthdayDate" />
-
-              </div>
-
-            </div>
-            <div class="col-md-6 mb-1">
-
-              <h6 class="mb-2 pb-1">Gender: </h6>
-
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender" value="option1"
-                  checked />
-                <label class="form-check-label" for="femaleGender">Female</label>
-              </div>
-
-              <div class="form-check form-check-inline">
-                <label class="form-check-label" for="maleGender">Male</label>
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleGender"
-                  value="option2" />
-
-              </div>
-
-              <div class="form-check form-check-inline">
-                <label class="form-check-label" for="otherGender">Other</label>
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="otherGender"
-                  value="option3" />
-
-              </div>
-
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-6 mb-1 pb-2">
-
-              <div class="form-outline">
-                <label class="form-label" for="emailAddress">Email</label>
-                <input type="email" id="emailAddress" class="form-control " />
-
-              </div>
-
-            </div>
-            <div class="col-md-6 mb-1 pb-2">
-
-              <div class="form-outline">
-                <label class="form-label" for="phoneNumber">Phone Number</label>
-                <input type="tel" id="phoneNumber" class="form-control " />
-
-              </div>
-
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-12">
-
-              <select class="select form-control-lg">
-                <option value="1" disabled>Choose option</option>
-                <option value="2">Subject 1</option>
-                <option value="3">Subject 2</option>
-                <option value="4">Subject 3</option>
-              </select>
-
-
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <input class="btn btn-primary " type="submit" value="Submit" />
-
-            <button type="button" class="btn btn-danger" (click)="closePopup()">
-              Close
-            </button>
-          </div>
-        </form>
-      </div>
-      <div>
-
-      </div>
-    </div>
-  </div>
-</div>
