--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,161 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+
+// .example-container {
+//     height: 400px;
+//     overflow: auto;
+//   }
+  
+//   .mat-table-sticky {
+//     background: #f4f5f7;
+//     opacity: 1;
+//   }
+  
+//   .example-sticky-toggle-group {
+//     margin: 8px;
+//   }
+  
+//   .mat-column-filler {
+//     padding: 0 8px;
+//     font-size: 10px;
+//     text-align: center;
+//   }
+  
+//   .mat-header-cell,
+//   .mat-footer-cell,
+//   .mat-cell {
+//     min-width: 80px;
+//     box-sizing: border-box;
+//   }
+  
+//   .mat-header-row,
+//   .mat-footer-row,
+//   .mat-row .mat-paginator{
+//     min-width: 1920px;
+//   }
+//   .mat-elevation-z8 {    
+//     overflow-x: auto;
+//    }
+  
+//   @media (max-width: 1200px) {
+//     .mat-header-row,
+//     .mat-footer-row,
+//     .mat-row {
+//       min-width: 2500px;
+//     }
+//   }
+  
+//   @media (max-width: 992px) {
+//     .mat-header-row,
+//     .mat-footer-row,
+//     .mat-row {
+//       min-width: 3000px;
+//     }
+//   }
+  
+//   @media (max-width: 768px) {
+//     .mat-header-row,
+//     .mat-footer-row,
+//     .mat-row {
+//       min-width: 4000px;
+//     }
+//   }
+  
+//   .mat-table-sticky-border-elem-top {
+//     border-bottom: 2px solid rgb(243, 243, 247);
+//   }
+  
+//   .mat-table-sticky-border-elem-right {
+//     border-left: 2px solid rgb(231, 231, 241);
+//   }
+  
+//   .mat-table-sticky-border-elem-bottom {
+//     border-top: 2px solid rgb(230, 230, 238);
+//   }
+  
+//   .mat-table-sticky-border-elem-left {
+//     border-right: 2px solid rgb(239, 239, 243);
+//   }
+
+//   @media screen 
+//   and (device-width: 360px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 2) {
+
+// }
+
+// /* Portrait */
+// @media screen 
+//   and (device-width: 320px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 2) 
+//   and (orientation: portrait) {
+
+// }
+
+// /* Landscape */
+// @media screen 
+//   and (device-width: 320px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 2) 
+//   and (orientation: landscape) {
+
+// }
+
+/* ----------- Galaxy S4, S5 and Note 3 ----------- */
+
+/* Portrait and Landscape */
+// @media screen 
+//   and (device-width: 320px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 3) {
+
+// }
+
+// /* Portrait */
+// @media screen 
+//   and (device-width: 320px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 3) 
+//   and (orientation: portrait) {
+
+// }
+
+// /* Landscape */
+// @media screen 
+//   and (device-width: 320px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 3) 
+//   and (orientation: landscape) {
+
+// }
+
+// /* ----------- Galaxy S6 ----------- */
+
+// /* Portrait and Landscape */
+// @media screen 
+//   and (device-width: 360px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 4) {
+
+// }
+
+// /* Portrait */
+// @media screen 
+//   and (device-width: 360px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 4) 
+//   and (orientation: portrait) {
+
+// }
+
+// /* Landscape */
+// @media screen 
+//   and (device-width: 360px) 
+//   and (device-height: 640px) 
+//   and (-webkit-device-pixel-ratio: 4) 
+//   and (orientation: landscape) {
+
+// }
